examples/ast-html/src/tests/corpus/snapshots/ast_html__tests__corpus__ruby_annotation_elements_without_close_tags@name.snap
---
source: examples/ast-html/src/tests/corpus/mod.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Document {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
            ],
            _range: Range {
                start_byte: 0,
                end_byte: 46,
                start_point: Point {
                    row: 0,
                    column: 0,
                },
                end_point: Point {
                    row: 0,
                    column: 46,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 2,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 5,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 9,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 13,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 17,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 46,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 46,
                    },
                },
                _id: 1,
                _parent: Some(
                    0,
                ),
                _is_missing: false,
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 6,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 6,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 1,
                    end_byte: 5,
                    start_point: Point {
                        row: 0,
                        column: 1,
                    },
                    end_point: Point {
                        row: 0,
                        column: 5,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
                _is_missing: false,
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 6,
                    end_byte: 9,
                    start_point: Point {
                        row: 0,
                        column: 6,
                    },
                    end_point: Point {
                        row: 0,
                        column: 9,
                    },
                },
                _id: 4,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 8,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 9,
                    end_byte: 16,
                    start_point: Point {
                        row: 0,
                        column: 9,
                    },
                    end_point: Point {
                        row: 0,
                        column: 16,
                    },
                },
                _id: 5,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 9,
                    end_byte: 13,
                    start_point: Point {
                        row: 0,
                        column: 9,
                    },
                    end_point: Point {
                        row: 0,
                        column: 13,
                    },
                },
                _id: 6,
                _parent: Some(
                    5,
                ),
                _is_missing: false,
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 10,
                    end_byte: 12,
                    start_point: Point {
                        row: 0,
                        column: 10,
                    },
                    end_point: Point {
                        row: 0,
                        column: 12,
                    },
                },
                _id: 7,
                _parent: Some(
                    6,
                ),
                _is_missing: false,
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 13,
                    end_byte: 16,
                    start_point: Point {
                        row: 0,
                        column: 13,
                    },
                    end_point: Point {
                        row: 0,
                        column: 16,
                    },
                },
                _id: 8,
                _parent: Some(
                    5,
                ),
                _is_missing: false,
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 10,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 12,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 16,
                    end_byte: 26,
                    start_point: Point {
                        row: 0,
                        column: 16,
                    },
                    end_point: Point {
                        row: 0,
                        column: 26,
                    },
                },
                _id: 9,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 11,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 16,
                    end_byte: 20,
                    start_point: Point {
                        row: 0,
                        column: 16,
                    },
                    end_point: Point {
                        row: 0,
                        column: 20,
                    },
                },
                _id: 10,
                _parent: Some(
                    9,
                ),
                _is_missing: false,
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 17,
                    end_byte: 19,
                    start_point: Point {
                        row: 0,
                        column: 17,
                    },
                    end_point: Point {
                        row: 0,
                        column: 19,
                    },
                },
                _id: 11,
                _parent: Some(
                    10,
                ),
                _is_missing: false,
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 20,
                    end_byte: 26,
                    start_point: Point {
                        row: 0,
                        column: 20,
                    },
                    end_point: Point {
                        row: 0,
                        column: 26,
                    },
                },
                _id: 12,
                _parent: Some(
                    9,
                ),
                _is_missing: false,
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 14,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 16,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 26,
                    end_byte: 39,
                    start_point: Point {
                        row: 0,
                        column: 26,
                    },
                    end_point: Point {
                        row: 0,
                        column: 39,
                    },
                },
                _id: 13,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 15,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 26,
                    end_byte: 30,
                    start_point: Point {
                        row: 0,
                        column: 26,
                    },
                    end_point: Point {
                        row: 0,
                        column: 30,
                    },
                },
                _id: 14,
                _parent: Some(
                    13,
                ),
                _is_missing: false,
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 27,
                    end_byte: 29,
                    start_point: Point {
                        row: 0,
                        column: 27,
                    },
                    end_point: Point {
                        row: 0,
                        column: 29,
                    },
                },
                _id: 15,
                _parent: Some(
                    14,
                ),
                _is_missing: false,
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 30,
                    end_byte: 39,
                    start_point: Point {
                        row: 0,
                        column: 30,
                    },
                    end_point: Point {
                        row: 0,
                        column: 39,
                    },
                },
                _id: 16,
                _parent: Some(
                    13,
                ),
                _is_missing: false,
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 18,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 39,
                    end_byte: 46,
                    start_point: Point {
                        row: 0,
                        column: 39,
                    },
                    end_point: Point {
                        row: 0,
                        column: 46,
                    },
                },
                _id: 17,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        TagName {
            _range: Range {
                start_byte: 41,
                end_byte: 45,
                start_point: Point {
                    row: 0,
                    column: 41,
                },
                end_point: Point {
                    row: 0,
                    column: 45,
                },
            },
            _id: 18,
            _parent: Some(
                17,
            ),
            _is_missing: false,
        },
    ],
}
